# mcf

./: .gitignore  Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: frame.rs  lib.rs  profile.rs
crates/core/src/structures/: buffer.rs  mod.rs  object.rs
crates/math/: Cargo.toml
crates/math/src/: geometry.rs
presets/hdv/: 1080_30p.json  1080_60i.json  720_30p.json  720_60p.json
profiles/hdv/: 1080_25p.json  1080_50i.json  720_25p.json  720_50p.json
src/: frame.rs  geometry.rs  lib.rs  profile.rs
src/color/: spaces.rs
src/structures/: properties.rs
