[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.145"

# [package]
# name = "mcf"
# version = "0.1.0"
# edition = "2024"

# build = "./build/main.rs"


# [lib]
# name = "mcf"
# path = "./src/lib.rs"
# crate-type = ["cdylib", "rlib"]

# [dependencies]

# [build-dependencies]
# serde = { version = "1.0.228", features = ["serde_derive"] }
# serde_json = "1.0.*"
